2008-02-01  Frank Warmerdam  <warmerdam@pobox.com>

	* libtiff/tif_jpeg.c: Do not try to fixup subsampling tags based on 
	the actual jpeg data stream if the first strip/tile has zero size.
	This is the case when GDAL creates a new file with zero sizes, closes
	and reopens it.

2008-01-07  Frank Warmerdam  <warmerdam@pobox.com>

	* tools/tiff2ps.c: fix up 64bit issues (from Edward Lam). 

2008-01-01  Frank Warmerdam  <warmerdam@pobox.com>

	* libtiff/tif_dirwrite.c: #ifdef out lots of unused functions.

	* Makefile.vc, libtiff/Makefile.vc, tools/Makefile.vc: Improve clean
	targets.

	* tools/tiffinfo.c, tools/tiffcmp.c, tools/gif2tiff.c, tools/bmp2tiff.c
	tools/tiff2pdf.c: Fix 64-bit warnings when compiling under MSVC 2005 
	(x64). 

	* tools/tiffset.c: Changes to reflect the fact that TIFFFieldWithTag() 
	and TIFFFieldWithName() now return TIFFField pointers instead of
	TIFFFieldInfo pointers.

	* tools/tiffdump.c: Added ssize_t typedef on Windows since it doesn't 
	exist. This makes it compile again on Windows

	* tif_aux.c, tif_getimage.c, tif_next.c, tif_predict.c, tif_win32.c,
	tiffconf.vc.h: Various 64bit fixes from Edward Lam identified on win64.

	* test/rewrite_tag.c: New test for TIFFRewriteField().

2007-12-31  Frank Warmerdam  <warmerdam@pobox.com>

	* tif_dirwrite.c: Added TIFFRewriteField().  This new function
	rewrites one field "on disk" updating an existing directory 
	entry.  Lots of limitations still...

	* tiffiop.h, tif_write.c, tif_dirread.c, tif_flush.c: Keep track of 
	TIFF_DIRTYSTRIP separately from TIFF_DIRTYDIRECT to indicate that 
	the strip offset/size values are dirty but nothing else about the 
	directory is dirty.  In flush handle "just stripmaps dirty" as a
	special case that just rewrites these values without otherwise 
	modifying the directory on disk using TIFFRewriteField().  

	We also modify logic so that in update mode the directory is not
	marked dirty on read, but only when something is changed.  This